    give sites a .conf suffix, add a hint to the NEWS file.
  * Do stateful configuration handling by remembering who enabled when a
    particular piece of configuration. That way in can be told under which
    circumstances for example modules should be re-enabled. Thanks to Filip M.
    Nowak who was providing a patch where my changes are built upon.

 -- Arno Töll <arno@debian.org>  Mon, 09 Apr 2012 17:41:05 +0200

apache2 (2.4.1-3) experimental; urgency=low

  [ Arno Töll ]
  * apache2-suexec-{custom,pristine}: Fix argument order when removing
    alternatives, do not remove alternatives on upgrades. Thanks Andreas
    Beckmann for spotting the issue (Closes: #665002)
  * Install suexec(8) link to /usr/share/man/man8/...
  * Enable mod_version statically, drop associated module load file.
  * Update PACKAGING hints and cope several questions raised among the
    discussions with packagers. Thus, invokation of apache2-maintscript-helper
    in maintainer scripts are covered now.
  * Changes in dh_apache2:
    + Invoke the maintscript helper postrm action for simple package removals,
      too.
    + Fix a bug which accidentally called "en{mod,site,conf}" instead of
      "di{mod,site,conf}"
    + Set the default conditional back to "true", now the maintainer script is
      expected to cope itself with upgrades correctly
  * Changes in apache2_maintscript_helper
    + Provide apache2_action_needed, apache2_msg
    + Parse maintainer script arguments to find out which script called us
    + Support APACHE2_MAINTSCRIPT_HELPER_QUIET which, when set, omits any
      visible output
    + Break APIs: apache2_invoke accepts a single configuration file argument
      only now. However, other than dh_apache2 no users of this feature were
      known.
  * Build the apache2.2-bin transitional package again, without it updates from
    Squeeze are broken from some use cases
  * Remove 2.2's postrm script only if we're actually upgrading.