@@ -23,10 +23,18 @@ clean-config-vars:
 	# FIXME: Maybe someone could document here why we actually need to
 	# cleanup some stuff here
 	set -x ; ( cd debian/tmp/usr/share/apache2/build/ ; \
-	grep -v -E '(^|_)(CPP|C)FLAGS' config_vars.mk > tmp_config_vars.mk ; \
-	printf "CPPFLAGS = %s\n" "`grep -E '(^|_)(CPPFLAGS|INCLUDES)' config_vars.mk | cut -d= -f 2- | tr ' ' '\n' | grep -E '^-([DI]|pthread)' | grep -v "PLATFORM" | sort | uniq | tr '\n' ' '`" >> tmp_config_vars.mk ; \
-	printf "CFLAGS = %s\n" "`grep -E '(^|_)(CPPFLAGS|CFLAGS|INCLUDES)' config_vars.mk | cut -d= -f 2- | tr ' ' '\n' | grep -E '^-(D|I/|pthread)' | grep -v "PLATFORM" | sort | uniq | tr '\n' ' '`" >> tmp_config_vars.mk ; \
+	grep -v -E '(^|_)(LD|CPP|C)FLAGS' config_vars.mk > tmp_config_vars.mk ; \
+	printf "CPPFLAGS = %s %s\n" \
+		"`grep -E '(^|_)(CPPFLAGS|INCLUDES)' config_vars.mk | cut -d= -f 2- | tr ' ' '\n' | grep -E '^-([DI]|pthread)' | grep -v "PLATFORM" | sort | uniq | tr '\n' ' '`" \
+		"`echo '$(AP2_CPPFLAGS)' | cut -d= -f 2- | tr ' ' '\n' | grep -E '^-([DI]|pthread)' | grep -v "PLATFORM" | sort | uniq | tr '\n' ' '`" >> tmp_config_vars.mk ; \
+	printf "CFLAGS = %s %s\n" "`grep -E '(^|_)(CPPFLAGS|CFLAGS|INCLUDES)' config_vars.mk | cut -d= -f 2- | tr ' ' '\n' | grep -E '^-(D|I/|pthread)' | grep -v "PLATFORM" | sort | uniq | tr '\n' ' '`" \
+		"`echo '$(AP2_CFLAGS)' | cut -d= -f 2- | tr ' ' '\n' | grep -E '^-([DI]|pthread)' | grep -v "PLATFORM" | sort | uniq | tr '\n' ' '`" >> tmp_config_vars.mk ; \
+	ldflags="`grep -E '(^|_)(LDFLAGS)' config_vars.mk | cut -d= -f 2-` `echo '$(AP2_LDFLAGS)' | cut -d= -f 2-`" ; \
+	printf "LDFLAGS = %s\n" "`echo $$ldflags | tr ' ' '\n' | sort | uniq | tr '\n' ' '`" >> tmp_config_vars.mk ; \
+	printf "SH_LDFLAGS = \n" >> tmp_config_vars.mk ; \
+	printf "LT_LDFLAGS = \n" >> tmp_config_vars.mk ; \
 	printf "NOTEST_CPPFLAGS = \n" >> tmp_config_vars.mk ; \
+	printf "NOTEST_LDFLAGS = \n" >> tmp_config_vars.mk ; \
 	printf "EXTRA_CPPFLAGS = \n" >> tmp_config_vars.mk ; \
 	printf "EXTRA_CFLAGS = \n" >> tmp_config_vars.mk ; \
 	mv tmp_config_vars.mk config_vars.mk ) ;
